Fix UserBar overflow

--- a/AntGameUI/src/antGame/UserBar/UserBar.module.css
+++ b/AntGameUI/src/antGame/UserBar/UserBar.module.css
@@ -8,8 +8,9 @@
   height: 1.75em;
   line-height: 1.75em;
   display: grid;
-  grid-template-columns: 20em auto 20em;
+  grid-template-columns: 19em auto 13em;
   background-color: lightgray;
+  overflow: hidden;
 }
 
 .username {
